--- a/package.json
+++ b/package.json
@@ -24,8 +24,15 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/mongoose": "^7.2.2",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-fastify": "^7.6.13",
+    "@nestjs/swagger": "^4.7.15",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "fastify-swagger": "^4.3.1",
+    "mongoose": "^5.11.15",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -34,6 +41,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
