--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/platform-fastify": "^7.6.13",
     "@nestjs/swagger": "^4.7.15",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^3.4.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "fastify-helmet": "^5.2.0",
     "fastify-swagger": "^4.3.1",
     "mongoose": "^5.11.15",
     "reflect-metadata": "^0.1.13",
