--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-fastify": "^7.6.13",
     "@nestjs/swagger": "^4.7.15",
+    "@nestjs/throttler": "^1.1.1",
     "bcrypt": "^5.0.1",
     "cache-manager": "^3.4.0",
     "class-transformer": "^0.4.0",
